# learypylib

./: .gitignore  README.md  pyproject.toml
src/learypylib/: __init__.py  openai.py
